syntax = "proto2";

package io.iohk.cef.ledger.identity.storage.protobuf;


message IdentityTransactionProto {
    required uint32 type = 1;
    required string identity = 2;
    required bytes publicKey = 3;
}

message IdentityHeaderProto {
    required bytes hash = 1;
    required int64 block_height = 2;
    required int64 created_epoch_milli = 3;
}

message IdentityBlockProto {
    required IdentityHeaderProto header = 1;
    repeated IdentityTransactionProto transactions = 2;
}
